--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "multitenant-ecommerce-2",
   "version": "0.1.0",
   "private": true,
@@ -6,10 +7,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate:types": "payload generate:types"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
+    "@payloadcms/db-mongodb": "^3.44.0",
+    "@payloadcms/next": "^3.44.0",
+    "@payloadcms/richtext-lexical": "^3.44.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -41,16 +46,19 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "graphql": "^16.11.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.523.0",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
+    "payload": "^3.44.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
     "react-resizable-panels": "^3.0.3",
     "recharts": "^3.0.2",
+    "sharp": "^0.34.2",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
