--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^5.1.1",
     "@payloadcms/db-mongodb": "^3.44.0",
     "@payloadcms/next": "^3.44.0",
+    "@payloadcms/plugin-multi-tenant": "^3.33.0",
     "@payloadcms/richtext-lexical": "^3.44.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
